# dempsta-engine

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile.in  README.md  TODO.md  build.py  build.sh  check.py  check.sh  imgui.ini  run.py  run.sh  test.py  test.sh
assets/: ExampleScene.dempsta
assets/scripts/: barrel.lua  bg_music.lua  camera.lua  component_test.lua  mask.lua  protector.lua  script.lua  sphere.lua  square.lua
assets/shaders/: quad.glsl  square.glsl  texture.glsl  triangle.glsl
docs/: Doxyfile.in
editor/: dempstaeditor.cpp  dempstaeditor.h  editor.cpp  main.cpp
editor/Panels/: scenehierarchy.cpp  scenehierarchy.h  scenepanel.cpp  scenepanel.h
engine/: .clang-format  CMakeLists.txt  Doxyfile.in
engine/docs/: CMakeLists.txt  Doxyfile.in
engine/include/: application.h  dempsta.h  entry.h  log.h
engine/include/Core/: application.h  assetsmanager.h  core.h  entry.h  input.h  layer.h  layerstack.h  log.h  math.h  pch.h  timestep.h  uuid.h  window.h
engine/include/Events/: applicationevent.h  event.h  keyevent.h  mouseevent.h
engine/include/ImGui/: imguilayer.h
engine/include/Input/: input.h  keycodes.h  mousebuttoncodes.h
engine/include/JSON/: json.h  visitables.h
engine/include/Platform/OpenAL/: openalsound.h  openalsoundapi.h  openalsoundinstance.h  openalutils.h
engine/include/Platform/OpenGL/: openglbuffer.h  openglcontext.h  openglframebuffer.h  openglrendererapi.h  openglshader.h  opengltexture.h  openglutils.h  openglvertexarray.h
engine/include/Renderer/: buffer.h  camera.h  color.h  context.h  font.h  framebuffer.h  label.h  rendercommand.h  renderer.h  renderer2d.h  rendererapi.h  shader.h  subtexture.h  text.h  texture.h  vertexarray.h
engine/include/Scene/: components.h  entity.h  scene.h  scenecamera.h  sceneserializer.h
engine/include/Scripting/: binding.h  luaclass.h  luadynamicmap.h  luaengine.h  marshalling.h  messaging.h  scriptengine.h  scriptentity.h  scriptmanager.h  types.h
engine/include/Scripting/API/: databuffer.h  helpers.h  luaentity.h
engine/include/Sound/: audiofile.h  sound.h  soundapi.h  soundcommand.h  soundprovider.h
engine/include/Utils/: conversion.h  fileutils.h  stringutils.h
engine/src/Core/: application.cpp  assetsmanager.cpp  input.cpp  layerstack.cpp  log.cpp  uuid.cpp  window.cpp
engine/src/ImGui/: imguibuild.cpp  imguilayer.cpp
engine/src/Input/: input.cpp
engine/src/Platform/OpenAL/: openalsoundapi.cpp  openalsoundinstance.cpp  openalutils.cpp
engine/src/Platform/OpenGL/: openglbuffer.cpp  openglcontext.cpp  openglframebuffer.cpp  openglrendererapi.cpp  openglshader.cpp  opengltexture.cpp  openglutils.cpp  openglvertexarray.cpp
engine/src/Renderer/: buffer.cpp  camera.cpp  font.cpp  framebuffer.cpp  label.cpp  rendercommand.cpp  renderer.cpp  renderer2d.cpp  rendererapi.cpp  shader.cpp  subtexture.cpp  text.cpp  texture.cpp  vertexarray.cpp
engine/src/Scene/: scene.cpp  scenecamera.cpp  sceneserializer.cpp
engine/src/Scripting/: luaengine.cpp  messaging.cpp  scriptengine.cpp  scriptentity.cpp  scriptmanager.cpp
engine/src/Scripting/API/: databuffer.cpp  luaentity.cpp
engine/src/Sound/: sound.cpp  soundapi.cpp  soundcommand.cpp  soundprovider.cpp
engine/src/Utils/: fileutils.cpp
engine/src/application/: application.cpp
engine/src/graphics/: window.cpp
engine/src/log/: log.cpp
engine/utils/cmake/: utils.cmake
examples/: ExampleScene.dempsta
game_test/: CMakeLists.txt
game_test/src/: main.cpp
src/: dempstaeditor.cpp  gamelayer.cpp  gamelayer.h  layer2d.cpp  layer2d.h  main.cpp
test/: CMakeLists.txt  json_test.h  scripting.h  test.cpp
test/assets/json/: error.json
test/scripts/: luafunctions.lua
utils/: Dockerfile
utils/linux/: build.sh  check.sh  run.sh  test.sh
utils/windows/: build.bat  run.bat  test.bat
